# mephala

./: .fingerprint  DMCA_TEMPLATE.md  LICENSE  LICENSE.txt  README.md  alembic.ini  pyproject.toml  requirements-dev.txt
.github/scripts/: gen_fingerprint.py
.github/workflows/: track-forks.yml
alembic/: env.py
alembic/versions/: 20241125_000001_001_initial_schema.py
api/: __init__.py  server.py
api/routes/: websocket.py
config/: honeypot.yml
core/: __init__.py  base_service.py  config.py  database.py  honeypot.py  logger.py
dashboard/: index.html  package.json
dashboard/src/: App.vue
docker/: docker-compose.yml
ml/: __init__.py
scripts/: seed_database.py  setup.sh  train_models.py
services/: __init__.py  ftp_honeypot.py  http_honeypot.py  ssh_honeypot.py
services/utils/: __init__.py  fake_filesystem.py  response_templates.py  session_manager.py
src/mephala/: beacon.py
tests/: __init__.py  conftest.py
tests/integration/: test_services.py
tests/unit/: test_base_service.py  test_config.py  test_database.py  test_logger.py
